--- a/manifest.tmpl
+++ b/manifest.tmpl
@@ -12,7 +12,7 @@ manifests:
       architecture: amd64
       os: linux
   -
-    image: mazzolino/power-bot:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}arm
+    image: mazzolino/power-bot:{{#if build.tag}}{{trimPrefix build.tag "v"}}-{{/if}}arm64
     platform:
-      architecture: arm
+      architecture: arm64
       os: linux
